syntax = "proto3";

package sfc_generaltemplate;

option csharp_namespace = "SFC.GeneralTemplate.Contracts.Messages.Find.Filters";

message GetGeneralTemplatesFilter
{
}