syntax = "proto3";

package sfc_generaltemplate;

import "Models/GeneralTemplate/generaltemplate.proto";

option csharp_namespace = "SFC.GeneralTemplate.Contracts.Messages.Find";

message GetGeneralTemplatesResponse
{
    repeated GeneralTemplate items = 1;
}