syntax = "proto3";

package sfc_generaltemplate;

import "google/protobuf/wrappers.proto";

option csharp_namespace = "SFC.GeneralTemplate.Contracts.Models.Common";

message RangeLimit
{
    google.protobuf.Int32Value from = 1;
    google.protobuf.Int32Value to = 2;
}